package models;

public enum Color {
    RED, 
    BLUE, 
    YELLOW, 
    ORANGE, 
    PINK, 
    GREEN, 
    NULL;
}
